Update footer; add meta description; add H1 link to index; fix contrast

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -82,7 +82,7 @@ p.tagline {
 	padding: 0;
 	margin: 0 0 20px 0;
 	font-size: 75%;
-	color: #ccc;
+	color: #999;
 }
 
 section#container {
